terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_instance" "k3s_server" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.k3s_sg.id]

  root_block_device {
    volume_size = 20
  }

  tags = {
    Name = "k3s-server"
  }

  user_data = <<-EOF
              #!/bin/bash
              echo "Preparing for K3s installation..."
              apt-get update
              apt-get install -y git
              git clone https://github.com/apurvagargote/new-portfolio.git /home/ubuntu/portfolio
              chmod +x /home/ubuntu/portfolio/scripts/install-k3s.sh
              /home/ubuntu/portfolio/scripts/install-k3s.sh
              chmod +x /home/ubuntu/portfolio/scripts/setup-nginx-ingress.sh
              /home/ubuntu/portfolio/scripts/setup-nginx-ingress.sh
              EOF
}

resource "aws_security_group" "k3s_sg" {
  name        = "k3s-security-group"
  description = "Security group for K3s server"

  # SSH access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS access
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Kubernetes API
  ingress {
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "public_ip" {
  value = aws_instance.k3s_server.public_ip
}

output "public_dns" {
  value = aws_instance.k3s_server.public_dns
}
